--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
-footer{
-    background-image: url("https://i.postimg.cc/PJvb5DPV/Dise-o-sin-t-tulo.png");
-}
+@media only screen and (max-width: 768px){}
+
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin: 8px;
+  }
+
+  .card-title {
+    color: pink;
+  }
