--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
-@media only screen and (max-width: 768px){}
+@media only screen and (max-width: 768px){
+    .about-us{
+        padding: 10px;
+      }
+    .oculto{display: none;}}
 
 
 .card {
@@ -9,3 +13,9 @@
   .card-title {
     color: pink;
   }
+
+  ul {    list-style: none;
+  }
+
+  ul li{color: pink;}
+
